--- a/TOC.ini
+++ b/TOC.ini
@@ -6,7 +6,7 @@
 -: account
 -: user_info
 -: user_manager
--: task_manager
+-: task
 -: integrity_guard
 -: code
 
@@ -15,6 +15,7 @@
 
 [task]
 -: README
+-: task_list
 
 [homepage]
 -: README
