--- a/TOC.ini
+++ b/TOC.ini
@@ -17,6 +17,10 @@
 -: README
 -: task_list
 -: publish_task
+-: task_supervise
+-: task_implement
+-: task_manager
+-: task_design
 
 [homepage]
 -: README
