--- a/TOC.ini
+++ b/TOC.ini
@@ -45,6 +45,8 @@
 -: login_by_mobile
 -: reset_passwd_by_mobile
 -: behavior_verification_code
+-: edit_user_info
+-: get_user_info
 
 [user_manager]
 -: README
