--- a/TOC.ini
+++ b/TOC.ini
@@ -3,6 +3,7 @@
 -: workspace
 -: publishlist
 -: group_chat
+-: works
 -: account
 -: user_manager
 -: task
@@ -47,6 +48,11 @@
 -: behavior_verification_code
 -: edit_user_info
 -: get_user_info
+
+[works]
+-: README
+-: upload_work
+-: works
 
 [user_manager]
 -: README
