案例和设计师

--- a/TOC.ini
+++ b/TOC.ini
@@ -21,12 +21,14 @@
 -: task_implement
 -: task_manager
 -: task_design
+-: upload_attachment
 
 [homepage]
 -: README
 -: getting_started
 -: task_category
 -: task_type
+-: case_designer
 
 [workspace]
 -: README
