--- a/TOC.ini
+++ b/TOC.ini
@@ -3,12 +3,14 @@
 -: workspace
 -: publishlist
 -: group_chat
+-: file
 -: works
 -: account
 -: user_manager
 -: task
 -: integrity_guard
 -: code
+
 
 [intro]
 -: README
@@ -51,6 +53,7 @@
 -: behavior_verification_code
 -: edit_user_info
 -: get_user_info
+-: avatar
 
 [file]
 -: README
