--- a/TOC.ini
+++ b/TOC.ini
@@ -4,6 +4,9 @@
 -: publishlist
 -: group_chat
 -: file
+-: comment
+-: like
+-: view
 -: works
 -: account
 -: user_manager
@@ -35,6 +38,19 @@
 [workspace]
 -: README
 
+
+[like]
+-: README
+-: create_like
+
+[comment]
+-: README
+-: create_comment
+
+[view]
+-: README
+-: view
+
 [publishlist]
 -: README
 
@@ -54,6 +70,7 @@
 -: edit_user_info
 -: get_user_info
 -: avatar
+-: excellent
 
 [file]
 -: README
