--- a/TOC.ini
+++ b/TOC.ini
@@ -7,6 +7,7 @@
 -: comment
 -: like
 -: view
+-: case
 -: works
 -: account
 -: user_manager
@@ -27,6 +28,7 @@
 -: task_manager
 -: task_design
 -: upload_attachment
+
 
 [homepage]
 -: README
@@ -50,6 +52,10 @@
 [view]
 -: README
 -: view
+
+[case]
+-: README
+-: case
 
 [publishlist]
 -: README
