--- a/TOC.ini
+++ b/TOC.ini
@@ -23,8 +23,8 @@
 -: README
 -: task_list
 -: publish_task
--: task_supervise
--: task_implement
+-: task_apply
+-: task_and_member
 -: task_manager
 -: task_design
 -: upload_attachment
