--- a/TOC.ini
+++ b/TOC.ini
@@ -1,8 +1,8 @@
 -: intro
 -: homepage
 -: workspace
--: publishlist
 -: group_chat
+-: talent_list
 -: file
 -: comment
 -: like
@@ -29,6 +29,9 @@
 -: task_design
 -: upload_attachment
 
+[talent_list]
+-: README
+-: talent_list
 
 [homepage]
 -: README
@@ -55,9 +58,6 @@
 [case]
 -: README
 -: case
-
-[publishlist]
--: README
 
 [group_chat]
 -: README
