--- a/TOC.ini
+++ b/TOC.ini
@@ -5,6 +5,7 @@
 -: talent_list
 -: file
 -: comment
+-: score
 -: like
 -: view
 -: case
@@ -50,6 +51,10 @@
 [comment]
 -: README
 -: create_comment
+
+[score]
+-: README
+-: score
 
 [view]
 -: README
