--- a/TOC.ini
+++ b/TOC.ini
@@ -6,6 +6,7 @@
 -: file
 -: comment
 -: score
+-: tag
 -: like
 -: view
 -: case
@@ -55,6 +56,10 @@
 [score]
 -: README
 -: score
+
+[tag]
+-: README
+-: tag
 
 [view]
 -: README
