--- a/TOC.ini
+++ b/TOC.ini
@@ -30,6 +30,7 @@
 -: task_manager
 -: task_design
 -: upload_attachment
+-: uid_task_list
 
 [talent_list]
 -: README
@@ -103,9 +104,6 @@
 -: works
 
 [user_manager]
--: README
-
-[task_manager]
 -: README
 
 [integrity_guard]
