--- a/TOC.ini
+++ b/TOC.ini
@@ -32,6 +32,8 @@
 -: upload_attachment
 -: uid_task_list
 -: publisher_task_list
+-: director_task_list
+-: designer_task_list
 
 [talent_list]
 -: README
