--- a/TOC.ini
+++ b/TOC.ini
@@ -90,6 +90,7 @@
 -: behavior_verification_code
 -: edit_user_info
 -: get_user_info
+-: get_me_user_info
 -: avatar
 -: excellent
 -: save_account_info
