--- a/TOC.ini
+++ b/TOC.ini
@@ -34,6 +34,8 @@
 -: publisher_task_list
 -: director_task_list
 -: designer_task_list
+-: task_content
+-: task_delivery
 
 [talent_list]
 -: README
@@ -77,6 +79,7 @@
 
 [group_chat]
 -: README
+-: join_group
 
 [account]
 -: README
