--- a/TOC.ini
+++ b/TOC.ini
@@ -31,9 +31,7 @@
 -: task_design
 -: upload_attachment
 -: uid_task_list
--: publisher_task_list
--: director_task_list
--: designer_task_list
+-: order_list
 -: task_content
 -: task_delivery
 -: update_task
